--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p class="view"><a href="http://karpz.com/RESUME_S18.pdf" target="_blank">View My Resume</a></p>
         
         
-        <img src = "http://karpz.com/head.png"></img>
+        <img src = "https://user-images.githubusercontent.com/24889408/63721417-3ded1600-c81f-11e9-9946-52d46400870e.jpeg"></img>
 
       </header>
       <section>
