--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <h3>
 <a class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>A Little About Me</h3>
 
-<p>Hi Operations Manager at VeryApt in Philadelphia. At VeryApt, I drive growth through aggregating disparate housing data and informing/facilitating users' apartment searches. <br><br>
+<p>Operations Manager at VeryApt in Philadelphia. At VeryApt, I drive growth through aggregating disparate housing data and informing/facilitating users' apartment searches. <br><br>
 I currently manage a team of realtors at a tech enabled real estate brokerage that sees traffic of anywhere from 60-600 unique users per month depending on seasonality. My job is to teach others how to leverage our aggregation tools (housed in a proprietary CRM) in order to maintain a +10% team monetization rate on traffic, regardless of volume. <br><br>
 I have extensive experience in reporting to management with data visualizations that aid in defining and troubleshooting business process issues.<br><br>
 Responsible for creating new listing agreements which have created an additional $30,000 in annual revenues in addition to the agent work described above which nets around $1,500 per monetized user.<br><br>
