--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html>
   <head>
+    <link rel="icon" 
+      type="image/png" 
+      href="http://"joshludwig.com/favicon.ico.PNG">
+   
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Joshua Ludwig</title>
@@ -22,7 +26,7 @@
 
         <p class="view"><a href="https://www.linkedin.com/in/joshualudwig94">View My Linkedin Profile</a></p>
         <p class="view"><a href="https://github.com/jhludz">View My GitHub Profile</a></p>
-        <p class="view"><a href="http://karpz.com/RESUME_S18.pdf" target="_blank">View My Resume</a></p>
+        <p class="view"><a href="http://joshludwig.com/Resume_Ludwig_08-26-2019.pdf" target="_blank">View My Resume</a></p>
         
         
         <img src = "https://user-images.githubusercontent.com/24889408/63722128-8a852100-c820-11e9-9b28-257e3994ed1e.jpeg"></img>
