--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <link rel="icon" 
-      type="image/png" 
-      href="http://"joshludwig.com/favicon.ico.PNG">
+    <link rel="shortcut icon" type="image/png" href="http://joshludwig.com/Favicon.PNG"/>
    
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
