--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ I currently manage a team of realtors at a tech enabled real estate brokerage th
 I have extensive experience in reporting to management with data visualizations that aid in defining and troubleshooting business process issues.<br><br>
 Responsible for creating new listing agreements which have created an additional $30,000 in annual revenues in addition to the agent work described above which nets around $1,500 per monetized user.<br><br>
 I have been a champion of Agile/Scrum in the role of product owner in an educational setting (working alongside a full-stack developer) to deliver a form submission web app that became the University of Delaware Hospitality Department's primary method of tracking required student participation. Making sure that our two man (if you count me) engineer team received well-defined work and that the Daily Scrum stayed within the scope of Sprint goals/planning<br><br>
-Personally I write and record my own music on Logic (musical recording software) which I will link to this page once I figure out how to export it to a file-type that this server supports.<br><br>
+In my free time, I write and record music, play basketball, tennis, and surf.<br><br>
 
 
 
@@ -49,6 +49,7 @@ Personally I write and record my own music on Logic (musical recording software)
 <h4>In Progress</h4>
 
 <a href="https://github.com/jhludz/jhludz.github.io">Self-made web page hosted by Github as a professional profile/resume resource</a><br></br>
+<a href="https://github.com/jhludz/jhludz.github.io">Placeholder for Sentiment Analysis of a twitter feed that will optimistically output live Tableau Data Visualizations on the results</a><br></br>
 
 <h4>Previous</h4>
 
