--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ In my free time, I write and record music, play basketball, tennis, and surf.<br
 <h4>In Progress</h4>
 
 <a href="https://github.com/jhludz/jhludz.github.io">Self-made web page hosted by Github as a professional profile/resume resource</a><br></br>
-<a href="https://github.com/jhludz/jhludz.github.io">Placeholder for Sentiment Analysis of a twitter feed that will optimistically output live Tableau Data Visualizations on the results</a><br></br>
+<a href="https://github.com/jhludz/jhludz.github.io">Placeholder for twitter account sentiment analysis project. Importing Twitter's API and using Python to direct it towards the account (Optimistically importing some Tableau code that renders live data visualizaitons on the analysis results)</a><br></br>
 
 <h4>Previous</h4>
 
