--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@ In my free time, I write and record music, play basketball, tennis, and surf.<br
 
 <h4>In Progress</h4>
 
-<a href="https://github.com/jhludz/jhludz.github.io">Self-made web page hosted by Github as a professional profile/resume resource</a><br></br>
-<a href="https://github.com/jhludz/jhludz.github.io">Placeholder for twitter account sentiment analysis project. Importing Twitter's API and using Python to direct it towards the account (Optimistically importing some Tableau code that renders live data visualizaitons on the analysis results)</a><br></br>
+<a href="https://github.com/jhludz/jhludz.github.io">Web page hosted by Github as a professional portfolio resource. Built from scratch (no front end developing software).</a><br></br>
+<a href="https://github.com/jhludz/jhludz.github.io">Placeholder for twitter account sentiment analysis project. Importing Twitter's API and using Python to pass account data to a ML library (Optimistically importing some Tableau code that renders live data visualizaitons on the analysis results)</a><br></br>
 
 <h4>Previous</h4>
 
