--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <p>Operations Manager at VeryApt in Philadelphia. At VeryApt, I drive growth through aggregating disparate housing data and informing/facilitating users' apartment searches. <br><br>
 I currently manage a team of realtors at a tech enabled real estate brokerage that sees traffic of anywhere from 60-600 unique users per month depending on seasonality. My job is to teach others how to leverage our aggregation tools (proprietary CRM) in order to maintain a +10% team monetization rate on traffic, regardless of volume. <br><br>
 I have extensive experience in reporting to management with data visualizations that aid in defining and troubleshooting business process issues.<br><br>
-Responsible for creating new listing agreements which have created an additional $30,000 in annual revenues in addition to the agent work described above which nets around $1,500 per monetized user.<br><br>
+Responsible for creating new listing agreements which have created an additional $30,000 in annual revenues, in addition to the agent work described above, which nets around $1,500 per monetized user.<br><br>
 I have been a champion of Agile/Scrum in the role of product owner in an educational setting (working alongside a full-stack developer) to deliver a form submission web app that became the University of Delaware Hospitality Department's primary method of tracking required student participation. Making sure that our two man engineer team received well-defined work and that the Daily Scrum stayed within the scope of Sprint goals/planning<br><br>
 In my free time, I write and record music, play basketball, tennis, and surf.<br><br>
 
