--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@ In my free time, I write and record music, play basketball, tennis, and surf.<br
 
       </section>
       <footer>
+        <div>
         <p><small>Hosted on GitHub Pages (it's cheaper than aws) &mdash; <a href="https://github.com/jhludz/jhludz.github.io">Repo for this page</a></small></p>
+        </div>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
