--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <p class="view"><a href="https://www.linkedin.com/in/joshualudwig94">View My Linkedin Profile</a></p>
         <p class="view"><a href="https://github.com/jhludz">View My GitHub Profile</a></p>
         <p class="view"><a href="http://joshludwig.com/Resume_Ludwig_08-26-2019 (1).pdf" target="_blank">View My Resume</a></p>
-        
-        
+        <p class="view"><a href="http://joshludwig.com/HIPPA_SECURITY.pdf" target="_blank">View My HIPPA Security Certificate<a/></p>
+        <p class="view"><a href="http://joshludwig.com/HIPPA_PRIVACY.pdf" target="_blank">View My HIPPA Privacy Certificate<a/></p>
         <img src = "https://user-images.githubusercontent.com/24889408/63722128-8a852100-c820-11e9-9b28-257e3994ed1e.jpeg"></img>
 
       </header>
