--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ In my free time, I write and record music, play basketball, tennis, and surf.<br
 
 <h4>In Progress</h4>
 
+
+<a href="datastudio.google.com/reporting/ec1367cf-30f7-48a0-82f6-3ee384f67321">Dynamic dashboard showing monthly audience and navigation metrics(can toggle date range in upper right corner) for Google Merchandise store. Data pulled from Google Analytics.</a><br></br>        
 <a href="https://github.com/jhludz/jhludz.github.io">Web page hosted by Github as a professional portfolio resource. Built from scratch (no front end developing software).</a><br></br>
 <a href="https://github.com/jhludz/jhludz.github.io">Placeholder for twitter account sentiment analysis project. Importing Twitter's API and using Python to pass account data to a ML library (Optimistically importing some Tableau code that renders live data visualizaitons on the analysis results)</a><br></br>
 
