--- a/index.html
+++ b/index.html
@@ -38,12 +38,11 @@
         <p class="view"><a href="http://joshludwig.com/HIPPA_SECURITY.pdf" target="_blank">View My HIPPA Security Certificate<a/></p>
         <p class="view"><a href="http://joshludwig.com/HIPPA_PRIVACY.pdf" target="_blank">View My HIPPA Privacy Certificate<a/></p>
         <img src = "https://user-images.githubusercontent.com/24889408/63722128-8a852100-c820-11e9-9b28-257e3994ed1e.jpeg"></img>
-        div{
-        padding: 70px;
+        <footer>
         <p><small>Hosted on GitHub Pages (it's cheaper than aws) &mdash; <a href="https://github.com/jhludz/jhludz.github.io">Repo for this page</a></small></p>
-        }
+        </footer>
       <p></p>
-      </header>
+     </header>
       <section>
         
 <h3>
