--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h1>Joshua Ludwig</h1>
         <h1>Resume and Portfolio</h1>
         <p></p>
-
+      </header>
 
         <p class="view"><a href="https://www.linkedin.com/in/joshualudwig94">View My Linkedin Profile</a></p>
         <p class="view"><a href="https://github.com/jhludz">View My GitHub Profile</a></p>
@@ -39,11 +39,11 @@
         <p class="view"><a href="http://joshludwig.com/HIPPA_PRIVACY.pdf" target="_blank">View My HIPPA Privacy Certificate<a/></p>
         <img src = "https://user-images.githubusercontent.com/24889408/63722128-8a852100-c820-11e9-9b28-257e3994ed1e.jpeg"></img>
         <footer>
-          <br></br>
+        <br></br>
         <p><small>Hosted on GitHub Pages (it's cheaper than aws) &mdash; <a href="https://github.com/jhludz/jhludz.github.io">Repo for this page</a></small></p>
         </footer>
       <p></p>
-     </header>
+     <!--</header>-->
       <section>
         
 <h3>
