--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@ In my free time, I write and record music, play basketball, tennis, and surf. Re
 <h4>Previous</h4>
 
 <a href="https://github.com/akarpz/hospitality-project">A webapp for community service hour tracking for UD's hospitality department</a><br></br>
-
-
-
+<a href="https://datastudio.google.com/s/o1HfQzWOGjM">Dynamic dashboard showing monthly audience and navigation metrics(can toggle date range in upper right corner) for Google Merchandise store. Data pulled from Google Analytics.</a><br></br>
 <h3>Contact</h3>
 <p>jhludwig94@gmail.com</p>
 <p>(484)-429-1584</p>
