--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ In my free time, I write and record music, play basketball, tennis, and surf. Re
         
 <a href="https://github.com/jhludz/jhludz.github.io">Web page hosted by Github as a professional portfolio resource. Built from scratch (no front end developing software).</a><br></br>
 <a href="https://github.com/jhludz/jhludz.github.io">Placeholder for twitter account sentiment analysis project. Importing Twitter's API and using Python to pass account data to a ML library (Optimistically importing some Tableau code that renders live data visualizaitons on the analysis results)</a><br></br>
-
+<p class="view"><a href="http://joshludwig.com/S'tuff Menu.pdf" target="_blank">Menu for a restaurant I run out of my house for my friends.<a/></p>
 <h4>Previous</h4>
 
 <a href="https://github.com/akarpz/hospitality-project">A webapp for community service hour tracking for UD's hospitality department</a><br></br>
