--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <p class="view"><a href="http://joshludwig.com/Resume_Ludwig_08-26-2019 (1).pdf" target="_blank">View My Resume</a></p>
         <p class="view"><a href="http://joshludwig.com/HIPPA_SECURITY.pdf" target="_blank">View My HIPPA Security Certificate<a/></p>
         <p class="view"><a href="http://joshludwig.com/HIPPA_PRIVACY.pdf" target="_blank">View My HIPPA Privacy Certificate<a/></p>
+        <p class="view"><a href="http://joshludwig.com/Course_Certificate.pdf" target="_blank">View My Google Analytics for Power Users Cetificate<a/></p>
         <img style="padding-bottom: 20px;" src = "https://user-images.githubusercontent.com/24889408/63722128-8a852100-c820-11e9-9b28-257e3994ed1e.jpeg"></img>
       <p></p>
      </header>
