--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <p class="view"><a href="http://joshludwig.com/HIPPA_SECURITY.pdf" target="_blank">View My HIPPA Security Certificate<a/></p>
         <p class="view"><a href="http://joshludwig.com/HIPPA_PRIVACY.pdf" target="_blank">View My HIPPA Privacy Certificate<a/></p>
         <p class="view"><a href="http://joshludwig.com/Course_Certificate.pdf" target="_blank">View My Google Analytics for Power Users Cetificate<a/></p>
-        <p class="view"><a href="http://joshludwig.com/Google Analytics Cert.PNG" target="_blank">View My Analytics Individual Qualification Certificate<a/></p> 
+        <p class="view"><a href="http://joshludwig.com/Google Analytics Cert.PNG" target="_blank">View My Google Analytics Individual Qualification Certificate<a/></p> 
         <img src="IMG_5050 (3).jpg"></img>
       <p></p>
      </header>
