--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <p class="view"><a href="http://joshludwig.com/HIPPA_PRIVACY.pdf" target="_blank">View My HIPPA Privacy Certificate<a/></p>
         <p class="view"><a href="http://joshludwig.com/Course_Certificate.pdf" target="_blank">View My Google Analytics for Power Users Cetificate<a/></p>
         <p class="view"><a href="http://joshludwig.com/Google Analytics Cert.PNG" target="_blank">View My Google Analytics Individual Qualification Certificate<a/></p> 
-        <img src="IMG_5050 (3).jpg" alt="Site Headshot" class="responsive"></img>
+        <img src="IMG_5050 (3).jpg" style="width:100%; height:auto; margin:0 auto;"  alt text="Headshot"></img>
       <p></p>
      </header>
       <section>
