--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
 
           <p class="w3-large"><b><i class="fa fa-certificate fa-fw w3-margin-right w3-text-teal"></i>Certifications</b></p>
-          <p><a href="https://joshludwig.com/Course_Certificate.pdf" target="_blank">Google Analytics Academy</p>
+          <p><a href="https://joshludwig.com/Course_Certificate.pdf" target="_blank">Google Analytics Academy<a/></p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">90%</div>
           </div>
-          <p>GAIQ</p>
+          <p<a href="http://joshludwig.com/Google Analytics Cert.PNG">GAIQ<a/></p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">
               <div class="w3-center w3-text-white">80%</div>
