--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               <div class="w3-center w3-text-white">80%</div>
             </div>
           </div>
-          <p><a href="joshludwig.com/HIPPA_PRIVACY.pdf" target="_blank">HIPPA Privacy</a></p>
+          <p><a href="http://joshludwig.com/HIPPA_PRIVACY.pdf" target="_blank">HIPPA Privacy</a></p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:75%">75%</div>
           </div>
-          <p><a href="joshludwig.com/HIPPA_SECURITY.pdf">HIPPA Security</a></p>
+          <p><a href="http://joshludwig.com/HIPPA_SECURITY.pdf">HIPPA Security</a></p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
           </div>
