--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <footer class="w3-container w3-teal w3-center w3-margin-top">
   <p>Find my professional media.</p>
   <i class="fa fa-github w3-hover-opacity"></i>
-  <i class="fa fa-linkedin w3-hover-opacity"></i>
+  <a href="https://www.linkedin.com/in/joshualudwig94/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a> and hosted on GitHub Pages (it's cheaper than aws)--<a href="https://github.com/jhludz/jhludz.github.io" target="_blank">Repo for this page</a></p>
 </footer>
 
