--- a/index.html
+++ b/index.html
@@ -93,9 +93,14 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-user-circle fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>A Little About Me</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Front End Developer / w3schools.com</b></h5>
+          <h5 class="w3-opacity"><b>At Work</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-          <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
+          <p>Operations Manager at VeryApt in Philadelphia: At VeryApt, I drive growth through aggregating disparate housing data and informing/facilitating users' apartment searches.
+             I currently manage a team of realtors at a tech enabled real estate brokerage that sees traffic of anywhere from 60-600 unique users per month depending on seasonality. My job is to teach others how to leverage our aggregation tools (proprietary CRM) in order to maintain a +10% team monetization rate on traffic, regardless of volume.
+             I have extensive experience in reporting to management with data visualizations that aid in defining and troubleshooting business process issues.
+             I am also responsible for creating new listing agreements which have created an additional $50,000 in annual revenues, in addition to the agent work described above, which nets around $1,500 per monetized user.
+         
+            </p>
           <hr>
         </div>
         <div class="w3-container">
