--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-user-circle fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>A Little About Me</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>At Work</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2018 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
           <p>Operations Manager at VeryApt in Philadelphia: At VeryApt, I drive growth through aggregating disparate housing data and informing/facilitating users' apartment searches.
              I currently manage a team of realtors at a tech enabled real estate brokerage that sees traffic of anywhere from 60-600 unique users per month depending on seasonality. My job is to teach others how to leverage our aggregation tools (proprietary CRM) in order to maintain a +10% team monetization rate on traffic, regardless of volume.
              I have extensive experience in reporting to management with data visualizations that aid in defining and troubleshooting business process issues.
@@ -104,15 +104,15 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Web Developer / something.com</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2012 - Dec 2014</h6>
-          <p>Consectetur adipisicing elit. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
+          <h5 class="w3-opacity"><b>Outside of Work</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Forever</h6>
+          <p>In my free time, I write and record music, cook, play basketball, tennis, and surf. Recently I have taught myself how to leverage Google Analytics and Google Data Studio to montior, understand, and visualize website/e-commerce performance. Particularly I have leveraged pre-defined segments and created custom segments to better understand my audience. In doing this, I have become highly skilled in buidling readable, actionable, and dynamic KPI Dashboards that extract a story from the data segments of interest. </p>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Graphic Designer / designsomething.com</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2010 - Mar 2012</h6>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p><br>
+          <h5 class="w3-opacity"><b>In School</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sept 2013 - May 2017</h6>
+          <p>I have been a champion of Agile/Scrum in the role of product owner in an educational setting (working alongside a full-stack developer) to deliver a form submission web app that became the University of Delaware Hospitality Department's primary method of tracking required student participation. Making sure that our two man engineer team received well-defined work and that the Daily Scrum stayed within the scope of Sprint goals/planning was my primary task. </p><br>
         </div>
       </div>
 
