--- a/index.html
+++ b/index.html
@@ -106,22 +106,22 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Outside of Work</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Forever</h6>
-          <p>In my free time, I write and record music, cook, play basketball, tennis, and surf. Recently I have taught myself how to leverage Google Analytics and Google Data Studio to montior, understand, and visualize website/e-commerce performance. Particularly I have leveraged pre-defined segments and created custom segments to better understand my audience. In doing this, I have become highly skilled in buidling readable, actionable, and dynamic KPI Dashboards that extract a story from the data segments of interest. </p>
+          <p>When I am away from the office, I have made continued education a priority. Particularly, I have developed my skills in the area of web design (evidenced by this page) with focus on leveraging responsive web templates and frameworks. Along with my web design development skills, I have trained myself in Digital Analytics (Google Analytics, Google Data Studio). Learning how to extract actionable insights from e-commerce platforms has been the emphasis of my learning, and thanks to Google's merchandise store, I have been able to hone these skills by building concise and readable KPI dashboards. In my free time, I write and record music, cook, play basketball, tennis, and surf.</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>In School</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sept 2013 - May 2017</h6>
-          <p>I have been a champion of Agile/Scrum in the role of product owner in an educational setting (working alongside a full-stack developer) to deliver a form submission web app that became the University of Delaware Hospitality Department's primary method of tracking required student participation. Making sure that our two man engineer team received well-defined work and that the Daily Scrum stayed within the scope of Sprint goals/planning was my primary task. </p><br>
+          <p>I have been a champion of Agile/Scrum in the role of product owner in an educational setting (working alongside a full-stack developer) to deliver a form submission web app that became the University of Delaware Hospitality Department's primary method of tracking required student participation. Making sure that our two man engineer team received well-defined work and that the Daily Scrum stayed within the scope of Sprint goals/planning was my primary task. This resulted in the timely delivery of a web-based tool that was fully integrated with the University's Central Authentication Service (CAS) and has replaced the paper and pencil tracking system used beforehand. The system even outputs a dynamic standard report dashboard that can be adjusted to show aggregate student service progress, of be filtered by individual students.  </p><br>
         </div>
       </div>
 
       <div class="w3-container w3-card w3-white">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-check-circle fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Projects I Have Built or Contributed to</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>W3Schools.com</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Forever</h6>
-          <p>Web Development! All I need to know in one place</p>
+          <h5 class="w3-opacity"><b>Professional Portfolio</b></h5>
+          <a href="https://github.com/jhludz/jhludz.github.io"><h6 class="w3-text-teal"><i class="fa fa-check fa-fw w3-margin-right"></i>Repository for Professional Portfolio</a></h6>
+          <p>Website I designed using responsive css templates and introducing some basic javascript. It serves as quick stop for potential employers/recruiters to learn more about me. </p>
           <hr>
         </div>
         <div class="w3-container">
