--- a/index.html
+++ b/index.html
@@ -125,15 +125,15 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>London Business School</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-check fa-fw w3-margin-right"></i>2013 - 2015</h6>
-          <p>Master Degree</p>
+          <h5 class="w3-opacity"><b>Dynamic KPI Dashboard (Google Merchandise)</b></h5>
+          <a href="https://datastudio.google.com/s/o1HfQzWOGjM"<h6 class="w3-text-teal"><i class="fa fa-check fa-fw w3-margin-right"></i>Link to Dashboard</a></h6>
+          <p>This dashboard offers a quick view of site audience by various dimensions, with the ability to adjust the date range that dictates the visualizations.</p>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>School of Coding</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010 - 2013</h6>
-          <p>Bachelor Degree</p><br>
+          <h5 class="w3-opacity"><b>S'TUFF ("Restaurant" for my friends) </b></h5>
+          <a href="http://joshludwig.com/S'tuff Menu.pdf"<h6 class="w3-text-teal"><i class="fa fa-check fa-fw w3-margin-right"></i>Menu PDF</a></h6>
+          <p>What started as a gag is now something that loads of my friends ask me to do for them/dates. I love to cook and made a menu as a joke once, but had so much fun the first time a friend ordered from it that I started offering to serve my friends dinner from the menu asking that they only pay for the price of ingredients. This is the type of person I am professionally, and personally, someone who likes to make life fun.</p><br>
         </div>
       </div>
 
