--- a/index.html
+++ b/index.html
@@ -135,6 +135,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <a href="http://joshludwig.com/S'tuff Menu.pdf"<h6 class="w3-text-teal"><i class="fa fa-check fa-fw w3-margin-right"></i>Menu PDF</a></h6>
           <p>What started as a gag is now something that loads of my friends ask me to do for them/dates. I love to cook and made a menu as a joke once, but had so much fun the first time a friend ordered from it that I started offering to serve my friends dinner from the menu asking that they only pay for the price of ingredients. This is the type of person I am professionally, and personally, someone who likes to make life fun.</p><br>
         </div>
+        <div class="w3-container">
+            <h5 class="w3-opacity"><b>Hospitality Form Submission App</b></h5>
+            <a href="https://github.com/akarpz/hospitality-project"<h6 class="w3-text-teal"><i class="fa fa-check fa-fw w3-margin-right"></i>Repository for App</a></h6>
+            <p>A web app that allows users to input information about community service hours that they have performed for UD's Hospitality department. The app will have a view for Students to input their hours and check on status, supervisors who will fill out a separate form to approve hours performed, and internal users who will need to see all information in a simplistic form.</p>
+    </div>
       </div>
 
     <!-- End Right Column -->
