--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Philadelphia, PA</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>jhludwig94@gmail.com</p>
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>(484) 429-1584</p>
-          <p><i class="fa fa-file fa-fw w3-margin-right w3-large w3-text-teal"></i><a href="Joshua Ludwig_Resume (2).pdf" target=_"blank">View My Resume</a></p>
+          <p><i class="fa fa-file fa-fw w3-margin-right w3-large w3-text-teal"></i><a href="Ludwig_Joshua_Reume_2019_Fall.pdf" target=_"blank">View My Resume</a></p>
           <hr>
 
           <p class="w3-large"><b><i class="fa fa-certificate fa-fw w3-margin-right w3-text-teal"></i>Certifications</b></p>
