--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
           <img src="IMG_5050 (3).jpg" style="width:100%" alt="Headshot">
-          <div class="w3-display-upperleft w3-container w3-text-black">
+          <div class="w3-display-topleft w3-container w3-text-black">
             <h2>Joshua Ludwig</h2>
           </div>
         </div>
