--- a/index.html
+++ b/index.html
@@ -53,21 +53,21 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p class="w3-large"><b><i class="fa fa-certificate fa-fw w3-margin-right w3-text-teal"></i>Certifications</b></p>
           <p><a href="https://joshludwig.com/Course_Certificate.pdf" target="_blank">Google Analytics Academy<a/></p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">Completed</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">Completed 100%</div>
           </div>
           <p><a href="http://joshludwig.com/Google Analytics Cert.PNG" target="_blank">Google Analytics Individual Qualification (GAIQ)<a/></p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">
-              <div class="w3-center w3-text-white">Completed</div>
+              <div class="w3-center w3-text-white">Completed 100%</div>
             </div>
           </div>
           <p><a href="http://joshludwig.com/HIPPA_PRIVACY.pdf" target="_blank">HIPPA Privacy</a></p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">Completed</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">Completed 100%</div>
           </div>
           <p><a href="http://joshludwig.com/HIPPA_SECURITY.pdf">HIPPA Security</a></p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">Completed</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">Completed 100%</div>
           </div>
           <br>
 
