--- a/index.html
+++ b/index.html
@@ -139,7 +139,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h5 class="w3-opacity"><b>Hospitality Form Submission App</b></h5>
             <a href="https://github.com/akarpz/hospitality-project"<h6 class="w3-text-teal"><i class="fa fa-check fa-fw w3-margin-right"></i>Repository for App</a></h6>
             <p>A web app that allows users to input information about community service hours that they have performed for UD's Hospitality department. The app will have a view for Students to input their hours and check on status, supervisors who will fill out a separate form to approve hours performed, and internal users who will need to see all information in a simplistic form.</p>
-    </div>
+       </div>
+        <div class="w3-container">
+            <h5 class="w3-opacity"><b>Wharton Housing Guide</b></h5>
+            <a href="https://www.veryapt.com/guides/housing/2-wharton-mba/"<h6 class="w3-text-teal"><i class="fa fa-check fa-fw w3-margin-right"></i>PDF guide distributed to partners</a></h6>
+            <p>Guide built for profitable partnerships created through business outreach. This is the product delivered once new partnerships are created. Creation and distribution of the guide results in increased direct traffic, and creates referring domains to increase landing page visits.</p>
+</div>
       </div>
 
     <!-- End Right Column -->
