--- a/index.html
+++ b/index.html
@@ -118,12 +118,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
       <div class="w3-container w3-card w3-white">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-check-circle fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Projects I Have Built or Contributed to</h2>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>Professional Portfolio</b></h5>
-          <a href="https://github.com/jhludz/jhludz.github.io"><h6 class="w3-text-teal"><i class="fa fa-check fa-fw w3-margin-right"></i>Repository for Professional Portfolio</a></h6>
-          <p>Website I designed using responsive css templates and introducing some basic javascript. It serves as quick stop for potential employers/recruiters to learn more about me. </p>
-          <hr>
-        </div>
+                <div class="w3-container">
+            <h5 class="w3-opacity"><b>Wharton Housing Guide</b></h5>
+            <a href="https://www.veryapt.com/guides/housing/2-wharton-mba/"<h6 class="w3-text-teal"><i class="fa fa-check fa-fw w3-margin-right"></i>PDF guide distributed to partners</a></h6>
+            <p>Guide built for profitable partnerships created through business outreach. This is the product delivered once new partnerships are created. Creation and distribution of the guide results in increased direct traffic, and creates referring domains to increase landing page visits.</p>
+       </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Dynamic KPI Dashboard (Google Merchandise)</b></h5>
           <a href="https://datastudio.google.com/s/o1HfQzWOGjM"<h6 class="w3-text-teal"><i class="fa fa-check fa-fw w3-margin-right"></i>Link to Dashboard</a></h6>
@@ -144,7 +143,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h5 class="w3-opacity"><b>Wharton Housing Guide</b></h5>
             <a href="https://www.veryapt.com/guides/housing/2-wharton-mba/"<h6 class="w3-text-teal"><i class="fa fa-check fa-fw w3-margin-right"></i>PDF guide distributed to partners</a></h6>
             <p>Guide built for profitable partnerships created through business outreach. This is the product delivered once new partnerships are created. Creation and distribution of the guide results in increased direct traffic, and creates referring domains to increase landing page visits.</p>
-</div>
+       </div>
+          <div class="w3-container">
+          <h5 class="w3-opacity"><b>Professional Portfolio</b></h5>
+          <a href="https://github.com/jhludz/jhludz.github.io"><h6 class="w3-text-teal"><i class="fa fa-check fa-fw w3-margin-right"></i>Repository for Professional Portfolio</a></h6>
+          <p>Website I designed using responsive css templates and introducing some basic javascript. It serves as quick stop for potential employers/recruiters to learn more about me. </p>
+          <hr>
+        </div>
       </div>
 
     <!-- End Right Column -->
