--- a/index.html
+++ b/index.html
@@ -95,7 +95,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <div class="w3-container">
           <h5 class="w3-opacity"><b>At Work (Tinuiti)</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2020 - <span class="w3-tag w3-teal w3-round">April 2020</span></h6>
-          <p>
+          <p>Shopping & Feed Coordinator Trainee at Tinuiti in Philadelphia: In 2020 I moved into digital marketing and began a training period at Tinuiti.
+              I developed expertise in the following UIs: Search Ads 360 (SA360), Google Shopping Ads, Google Analytics, Google Adwords Editor, Kenshoo, Feedonomics, Wrike, and Supermetrics.
+              Using these tools, I supported accounts with monthly spend upwards of $100,000. I managed daily search term bid adjustments/optimizations 
+              to eliminate poor performing search queries and grow ROAS on high performers. I pulled weekly SQRs to eliminate problematic search trends from campaigns,
+              and updated the Shopping account pacing documents/logs to record account performance for reporting call reference. 
          
             </p>
           <hr>
