--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-user-circle fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>A Little About Me</h2>
           <div class="w3-container">
-          <h5 class="w3-opacity"><b>At Work (Tinuiti)</b></h5>
+          <h5 class="w3-opacity"><b>At Work <a href="https://tinuiti.com/"target="_blank">(Tinuiti)<a/></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2020 - <span class="w3-tag w3-teal w3-round">April 2020</span></h6>
           <p>Shopping & Feed Coordinator Trainee at Tinuiti in Philadelphia: In 2020 I moved into digital marketing and began a training period at Tinuiti.
               I developed expertise in the following UIs: Search Ads 360 (SA360), Google Shopping Ads, Google Analytics, Google Adwords Editor, Kenshoo, Feedonomics, Wrike, and Supermetrics.
