--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>At Work (VeryApt)</b></h5>
+          <h5 class="w3-opacity"><b>At Work <a href="https://www.veryapt.com/"target="_blank">(VeryApt)<a/></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2018 - <span class="w3-tag w3-teal w3-round">Dec 2020</span></h6>
           <p>Operations Manager at VeryApt in Philadelphia: At VeryApt, I managed engaged user growth through aggregating disparate housing data to inform/facilitate apartment searches.
              I managed anage a team of realtors at a tech enabled brokerage that received traffic anywhere from 60-600 unique users per month depending on seasonality. My job is to teach others how to leverage our aggregation tools (proprietary CRM) in order to maintain a +10% team monetization rate on traffic, regardless of volume.
