--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               <div class="w3-center w3-text-white">Completed 100%</div>
             </div>
           </div>
+            <p><a href="https://skillshop.exceedlms.com/student/award/44088538">Google Shopping</a></p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">Completed 100%</div>
+          </div>
           <p><a href="http://joshludwig.com/HIPPA_PRIVACY.pdf" target="_blank">HIPPA Privacy</a></p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">Completed 100%</div>
