--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               I developed expertise in the following UIs: Search Ads 360 (SA360), Google Shopping Ads, Google Merchant Center Google Analytics, Google Adwords Editor, Bing Ads, Kenshoo, Feedonomics, Wrike, and Supermetrics.
               Using these tools, I supported accounts with monthly spend upwards of $100,000. I managed daily search term bid adjustments/optimizations 
               to eliminate poor performing search queries and grow ROAS on high performers. I pulled weekly SQRs to eliminate problematic search trends from campaigns,
-              and updated the Shopping account pacing documents/logs to record account performance for reporting call reference. 
+              and updated the Shopping account pacing documents/logs and generated custom reporting to inform clients on account performance on a weekly basis. 
          
             </p>
           <hr>
