--- a/index.html
+++ b/index.html
@@ -137,7 +137,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                 <div class="w3-container">
             <h5 class="w3-opacity"><b>Wharton Housing Guide</b></h5>
             <a href="https://www.veryapt.com/guides/housing/2-wharton-mba/"<h6 class="w3-text-teal"><i class="fa fa-check fa-fw w3-margin-right"></i>PDF guide distributed to partners</a></h6>
-            <p>Guide built for profitable partnerships created through business outreach. This is the product delivered once new partnerships are created. Creation and distribution of the guide results in increased direct traffic, and creates referring domains to increase landing page visits.</p>
+            <p>Custom guide I designed to sell partnerships to MBA schhols, Residency programs, Medical Schools, and Law Schools. 
+                This product created new lead generation pipelines in metros across the US. Creation and distribution of the guide immediatly after selling a partnership  resulted in 
+                increased direct traffic, and created new referring domains that grew landing page visits.</p>
       <hr>
       </div>
         <div class="w3-container">
