--- a/index.html
+++ b/index.html
@@ -101,13 +101,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-user-circle fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>A Little About Me</h2>
           <div class="w3-container">
-               <h5 class="w3-opacity"><b><a href="https://tinuiti.com/"target="_blank">Post COVID-19 Layoff<a/></b></h5>
+               <h5 class="w3-opacity"><b><a href="https://trailblazer.me/id/jhludwig94"target="_blank">Post COVID-19 Layoff<a/></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>April 2020 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-          <p>Shopping & Feed Coordinator Trainee at Tinuiti in Philadelphia: In 2020 I moved into digital marketing and began a working at Tinuiti.
-              I developed expertise in the following UIs: Search Ads 360 (SA360), Google Shopping Ads, Google Merchant Center Google Analytics, Google Adwords Editor, Bing Ads, Kenshoo, Feedonomics, Wrike, and Supermetrics.
-              Using these tools, I supported accounts with monthly spend upwards of $100,000. I managed daily search term bid adjustments/optimizations 
-              to eliminate poor performing search queries and grow ROAS on high performers. I pulled weekly SQRs to eliminate problematic search trends from campaigns,
-              and updated the Shopping account pacing documents/logs and generated custom reporting to inform clients on account performance on a weekly basis. 
+          <p>Following my layoff in response to the COVID-19 pandemic, I had to think about what to do next. Rather than jump back into the industry I had just entered, I decided 
+              to hit a full restart. After researching opportunities, I found the Salesforce ecosystem to be brimming with opportunities for career growth and powerful technical 
+              skill development. For the last four months, I have dedicated all my newfound freetime to learning the primary demands of a Salesforce Admin, preparing myself to tackle
+              problems both recurrent and mundane as well as the more challenging variety that make talented Salesforce Admins a vital resource to any company.
          
             </p>
           <h5 class="w3-opacity"><b>At Work <a href="https://tinuiti.com/"target="_blank">(Tinuiti)<a/></b></h5>
