--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
 
           <p class="w3-large"><b><i class="fa fa-certificate fa-fw w3-margin-right w3-text-teal"></i>Certifications</b></p>
-              <p><a href="https://joshludwig.com/Salesforce_Administrator.pdf" target="_blank">Salesforce Administrator<a/></p>
+              <p><a href="https://joshludwig.com/Salesforce_Administrator.pdf" target="_blank">Salesforce Administrator (201)<a/></p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">Completed 100%</div>
           </div>
