--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-user-circle fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>A Little About Me</h2>
           <div class="w3-container">
-               <h5 class="w3-opacity"><b><a href="https://trailblazer.me/id/jhludwig94"target="_blank">Post COVID-19 Layoff<a/></b></h5>
+               <h5 class="w3-opacity"><b><a href="https://trailblazer.me/id/jhludwig94"target="_blank">Post COVID-19 Layoff (Trailhead Training)<a/></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>April 2020 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
           <p>Following my layoff in response to the COVID-19 pandemic, I had to think about what to do next. Rather than jump back into the industry I had just entered, I decided 
               to hit a full restart. After researching opportunities, I found the Salesforce ecosystem to be brimming with opportunities for career growth and powerful technical 
