--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Outside of Work</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Forever</h6>
-          <p>When I am away from the office, I have made continued education a priority. Particularly, I have developed my skills in the area of web design (evidenced by this page) with focus on leveraging responsive web templates and frameworks. Along with my web design development skills, I have trained myself in Digital Analytics (Google Analytics, Google Data Studio). Learning how to extract actionable insights from e-commerce platforms has been the emphasis of my learning, and thanks to Google's merchandise store, I have been able to hone these skills by building concise and readable KPI dashboards. In my free time, I write and record music, cook, play basketball, tennis, and surf.</p>
+          <p>When I am away from the office, I have made continued education a priority. In my free time, I write and record music, cook, play basketball, tennis, and surf.</p>
           <hr>
         </div>
         <div class="w3-container">
