--- a/index.html
+++ b/index.html
@@ -101,13 +101,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-user-circle fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>A Little About Me</h2>
           <div class="w3-container">
-               <h5 class="w3-opacity"><b>Post COVID-19 Layoff <a href="https://trailblazer.me/id/jhludwig94"target="_blank">(Trailhead Training)<a/></b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>April 2020 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-          <p>Following my layoff in response to the COVID-19 pandemic, I had to think about what to do next. Rather than jump back into the industry I had just entered, I decided 
-              to hit a full restart. After researching opportunities, I found the Salesforce ecosystem to be brimming with opportunities for career growth and powerful technical 
-              skill development. For the last four months, I have dedicated all my newfound freetime to learning the primary demands of a Salesforce Admin, preparing myself to tackle
-              problems both recurrent and mundane as well as the more challenging variety that make talented Salesforce Admins a vital resource to any company.
-         
+               <h5 class="w3-opacity"><b>At Work <a href="https://trailblazer.me/id/jhludwig94"target="_blank">(Coventry)<a/></b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>November 2020 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+          <p>Associate Salesforce Administrator in Fort Washington: Being laid off during the COVID pandemic motivated me to continue building technical skill. I earned my Salesforce
+              201 certification and found an admin role at Coventry Resources LLC. The Role has focused heavily on Lightning flow creation and testing.
+             
             </p>
           <h5 class="w3-opacity"><b>At Work <a href="https://tinuiti.com/"target="_blank">(Tinuiti)<a/></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2020 - April 2020</span></h6>
