--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>jhludwig94@gmail.com</p>
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>(484) 429-1584</p>
           <p><i class="fa fa-file fa-fw w3-margin-right w3-large w3-text-teal"></i><a href="Resume_Ludwig_Fall.pdf" target=_"blank">View My Resume</a></p>
+          <p><i class="fa fa-link fa-fw w3-margin-right w3-large w3-text-teal"></i><a href="https://trailblazer.me/id/jhludwig94">Trailhead Profile</a></p>
           <hr>
 
           <p class="w3-large"><b><i class="fa fa-certificate fa-fw w3-margin-right w3-text-teal"></i>Certifications</b></p>
@@ -101,7 +102,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-user-circle fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>A Little About Me</h2>
           <div class="w3-container">
-               <h5 class="w3-opacity"><b>At Work <a href="https://trailblazer.me/id/jhludwig94"target="_blank">(Coventry)<a/></b></h5>
+               <h5 class="w3-opacity"><b>At Work <a href="https://www.coventrydirect.com/" target="_blank">(Coventry)<a/></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>November 2020 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
           <p>Associate Salesforce Administrator in Fort Washington: Being laid off during the COVID pandemic motivated me to continue building technical skill. I earned my Salesforce
               201 certification and found an admin role at Coventry Resources LLC. The Role has focused heavily on Lightning flow creation and testing.
