--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-user-circle fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>A Little About Me</h2>
           <div class="w3-container">
-               <h5 class="w3-opacity"><b>At Work <a href="https://www.coventrydirect.com/" target="_blank">(Coventry)<a/></b></h5>
+               <h5 class="w3-opacity"><b><a href="https://www.coventrydirect.com/" target="_blank">(Coventry)<a/></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>November 2020 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
           <p>Associate Salesforce Administrator in Fort Washington: Being laid off during the COVID pandemic motivated me to continue building technical skill. I earned my Salesforce
               201 certification and found an admin role at Coventry Resources LLC. The Role has focused heavily on Lightning flow creation and testing.
